@@ -1963,7 +1963,7 @@ main(argc, argv)
     printf("%s %s (%s)\n", PRODUCT, VERSION, HOST);
 #endif /* !HAVE_GCC */
 
-    printf(copyright);
+    printf("%s",copyright);
 
 #ifdef DEBIAN
     add_to_environment("GIT_EDITOR",    "EDITOR",     "sensible-editor");
